[优化]BASE64Encoder 在jdk1.9及以后不再被支持，使用新的方法替换